--- a/tools/install
+++ b/tools/install
@@ -33,7 +33,9 @@ while getopts e: opt; do
   esac
 done
 
+cd app/server_engine
 RAILS_ENV=$server_env bundle install
-RAILS_ENV=$server_env rake setup
+RAILS_ENV=$server_env bundle exec rake setup
+cd ../../
 ./rebar get-deps
 ./rebar compile
